Closed Bug 639508 Opened 13 years ago Closed 13 years ago

TI+JM: Assertion failure: Call site vanished., at ../methodjit/Compiler.cpp:2409

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jandem, Unassigned)

References

Details

(Whiteboard: fixed-in-jaegermonkey)

--
var o = 2;
o = o.p;
--
$ ./js -m -n -a
js> var o = 2;
js> o = o.p;
Assertion failure: Call site vanished., at ../methodjit/Compiler.cpp:2409
The problem here is that JSOP_GETPROP and other property cases for compiling do not have a 'if (recompiling)' check to handle the case where the recompiled version emitted an IC instead of a stub (where type information was better the first time making us decide the access could not IC).  This is easy to fix but this code will be changing soon for bug 621937 so will fix as part of that bug.
Depends on: 621937
Fixed along with a few jit-test failures with -m -n -a.

http://hg.mozilla.org/projects/jaegermonkey/rev/92ba109b97da
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Whiteboard: fixed-in-jaegermonkey
You need to log in before you can comment on or make changes to this bug.