[INFER] Fix jit-test -mna failures, also call site rejoining at GETPROP, bug 639508.